# gudot

./: .gitignore  Cargo.toml  README.md  build.rs
gudot-gwasm/: Cargo.toml
gudot-gwasm/.cargo/: config
gudot-gwasm/src/: exec.rs  main.rs  merge.rs  split.rs  utils.rs
gudot-utils/: Cargo.toml
gudot-utils/src/: lib.rs
src/: main.rs  utils.rs
