[package]
name = "gudot"
version = "0.1.0"
authors = ["Marcin Benke <marcin.benke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmorph = { git="https://github.com/golemfactory/gmorph.git" }
structopt="0.2"
gudot-utils = { path = "./gudot-utils" }

[workspace]
exclude = ["gudot-gwasm"]
