[package]
name = "gudot"
version = "0.1.0"
authors = ["Marcin Benke <marcin.benke@golem.network>", "Jakub Konka <kubkon@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmorph = { git="https://github.com/golemfactory/gmorph.git" }
structopt="0.2"
gudot-utils = { path = "./gudot-utils" }
rand = "0.7"
rand_distr = "0.2"
chrono = "0.4.9"

[dependencies.plotters]
version = "0.2"
# default_features = false
# features = ["svg"]

[workspace]
exclude = ["gudot-gwasm"]
