[package]
name = "gudot"
version = "0.1.0"
authors = ["Marcin Benke <marcin.benke@golem.network>", "Jakub Konka <kubkon@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gwasm-api = { git="https://github.com/golemfactory/gwasm-runner.git" }
gmorph = { git="https://github.com/golemfactory/gmorph.git"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gudot-utils = { path = "../gudot-utils" }
structopt = "0.3"
failure = "0.1"
