[package]
name = "gudot-utils"
version = "0.1.0"
authors = ["Marcin Benke <marcin.benke@golem.network>", "Jakub Konka <kubkon@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmorph = { git = "https://github.com/golemfactory/gmorph" }
serde = "1.0"
serde_json = "1.0"
